2008-08-26  Philip Van Hoof  <philip@codeminded.be>

	* src/trackerd/tracker-daemon.c
	* src/trackerd/tracker-marshal.list
	* data/dbus/tracker-daemon.xml: Added a stats-changed signal

2008-08-26  Carlos Garnacho  <carlos@imendio.com>

	* tests/tracker-indexer/Makefile.am: Added LIBDIR define for
	tracker-metadata-utils.c

2008-08-26  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/files.c
	(tracker_metadata_call_text_filter) (get_file_content): Moved to
	tracker-metadata-utils.c
	(tracker_module_file_get_text): Use these new functions.
	* src/tracker-indexer/tracker-metadata-utils.[ch]: Refactor
	MetadataContext so it can also spawn external text extractors.
	(tracker_metadata_utils_get_text): New helper function.

2008-08-25  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer-db.c
	* src/tracker-indexer/tracker-indexer.c:
	Using the new method also here to obtain path and name also here.
	
2008-08-25  Ivan Frade  <ivan.frade@nokia.com>

	* src/libtracker-common/tracker-file-utils.[ch]
	(tracker_file_get_path_and_name): New function to get the path and
	name of an uri. It removes some duplicate code and uses g_file
	to parse the path, so we can fix "x//y" in uris.
	
	* src/trackerd/tracker-db.c
	* src/trackerd/tracker-files.c: Using the new method, instead of
	the old code.
	
	* tests/libtracker-common/tracker-file-utils-test.c: Fixed minor
	things in previous tests and added test for the new method.
	

2008-08-25  Mikael Ottela   <mikael.ottela@ixonos.com>
	
	* src/tracker-extract/tracker-extract-gstreamer.c: Gstreamer
	extractor extracts now also images.	

2008-08-25  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-extract/Makefile.am:
	* src/tracker-extract/tracker-extract-ps.c: Fix up symbol not found
	that prevented the PS module to be loaded.
	* src/tracker-extract/tracker-extract.c (initialize_extractors):
	Provide a better error message if a module can't be loaded.
